src/styles.css
html {
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
  }
  
*, *:before, *:after {
    box-sizing: inherit;
  }
  
body {
    margin: 0;
    padding: 0;
    font-weight: normal;
  }

section {
    height: 100vh;
    background-color: white;
}

.me {
    background-color: #1c1d25;
    height: 100vh;
    color: white;
    font-size: 40px;
}

footer {
    height: 500px;
    background-color: black;
}

nav {
    display: flex;
    justify-content: space-between;
}

ul {
    display: flex;
    list-style-type: none;
    width: 500px;
    justify-content: space-around;
    font-size: 30px;
}

li {
    text-decoration: none;
    font-weight: 200;
}

h1 {
    font-size: 90px;
    margin: 0;
}

h2 {
    font-size: 50px;
}

p {
    margin: 0;
    font-size: 30px;
}

.me-container {
    display: flex;
    height: 100%;
    justify-content: space-between;
    align-items: center;
}

.me-text {
    margin-left: 40px;
    margin-bottom: 250px;
}

.btn {
    width: 200px;
    height: 55px;
    border-radius: 30px;
    background-color: coral;
    text-align: center;
    font-size: 30px;
    font-weight: 300;
    padding-top: 5px;
    margin-top: 20px;
    cursor: pointer;
}

.btn:hover {
    background-color: #ef744b;
}

.btn:active {
    background-color: darkgrey;
    color: #808080;
}

.socials {
    padding-bottom: 200px;
    display: flex;
    flex-direction: column;
}

.social {
    fill: white;
    margin: 20px;
}

.about-section {
    display: flex;
    justify-content: space-around;
    padding: 60px;
}

.project-section {
    display: flex;
    flex-direction: column;
    text-align: center;
    padding: 60px;
}

.headshot {
    width: 300px;
    height: 300px;
    border-radius: 150px;
}

.headshot-container {
    display: flex;
    align-items: center;
}

.project-card {
    width: 400px;
    height: 400px;
    box-shadow: 5px 5px 5px grey;
}

.project-container {
    display: flex;
    justify-content: space-around;
}

.project-img {
    height: 400px;
    width: 400px;
}

.sub-text {
    font-size: 13px;
}

hr {
    margin-left: 90px;
    margin-right: 90px;
}

.project-link {
    text-decoration: none;
    color: #ef744b
}

a {
    text-decoration: none;
    color: white;
}

.contact-container {
    display: flex;
    justify-content: space-between;
    text-align: center;
}

.email-form {
    display: flex;
    flex-direction: column;
    margin-bottom: 0;
    color: white;
    padding: 120px;
}

.contact-info {
    color: white;
    padding: 120px;
}

input {
    margin-bottom: 5px;
    width: 250px;
}

